tests/paczka1/small_fuzzy/79437283.err
Error in line 3: vqPQ A75 92,9
Error in line 4: A75 A105 78,2
Error in line 13: gb0Hs A105 -2,5
